# app.1983

collector/: AGENTS.md  ARCHITECTURE.md  build-task.txt  checkpoints.py  cli.py  collect_comments.py  collect_threads.py  collector_settings.json  config.py
cultural-signal-graph/: README.md  build-task.txt  dev-docs.html  error-log-1.txt  pyproject.toml
cultural-signal-graph/artifacts/: contested_phrases.csv  cultural_signals_report.md  cultural_signals_report_methodology.md  errors.jsonl  phrase_frequency.csv  temporal_phrase_counts.csv  top_signals.csv
cultural-signal-graph/csg/: __init__.py
cultural-signal-graph/data/processed/: comment_phrase_edges.parquet  comments.parquet  phrases.parquet  reply_edges.parquet  thread_metrics.parquet  threads.parquet
cultural-signal-graph/data/raw/: threads.jsonl
cultural-signal-graph/src/csg/: __init__.py  config.py  models.py
cultural-signal-graph/src/csg/analysis/: cooccurrence.py  debate.py  frequency.py  trends.py
cultural-signal-graph/src/csg/cli/: analyze.py  build_graph.py  extract_phrases.py  ingest.py
cultural-signal-graph/src/csg/extract/: normalize.py  phrases.py
cultural-signal-graph/src/csg/graph/: __init__.py  build_phrase_links.py  build_reply_graph.py
cultural-signal-graph/src/csg/io/: load_jsonl.py
cultural-signal-graph/src/cultural_signal_graph.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cultural-signal-graph/tests/: test_analysis.py  test_ingestion.py  test_phrase_extraction.py  test_reply_graph.py
image-evaluator/: 1983_image_eval_prompt.md  AGENTS.md  (+4 more)
(+4 files in other folders)
